[package]
name = "Assignment3A"
version = "0.1.0"
authors = ["James <jamescarterbell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-markable-ptr = { git = "https://github.com/jamescarterbell/AtomicMarkablePtr", branch = "main"}
rand = "0.7.3"